--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WaterTracker",
+  "name": "Smart-Foxes-WaterTracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,10 +24,12 @@
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-password-strength-bar": "^0.4.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0",
